# Sage

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  Makefile  README.md  build.ps1  cliff.toml  coverage.xml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-test.yml  ci.yml  deploy-pages.yml  release.yml  security.yml
config/: default.toml  institution.toml
config/templates/: academic_report.typ
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  INSTITUTION_GUIDE.md  SETUP.md  evaluation.md
eval/: dataset.json  evaluator.py  generate_dataset.py  run_eval.py
frontend/: .gitignore  .npmrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  specs.md
frontend/artifacts/sage/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/artifacts/sage/src/: App.tsx  index.css  main.tsx
frontend/artifacts/sage/src/api/: mock.ts
frontend/artifacts/sage/src/components/: AppErrorBoundary.tsx  Composer.tsx  Markdown.tsx  ProgressTimeline.tsx  Sidebar.tsx  TypewriterMarkdown.tsx
frontend/artifacts/sage/src/components/chat/: WelcomeScreen.tsx
frontend/artifacts/sage/src/components/setup/: FirstRun.tsx  ModelLoading.tsx
frontend/artifacts/sage/src/components/ui/: badge.tsx  button.tsx  sidebar.tsx
frontend/artifacts/sage/src/hooks/: use-chat-stream.ts
frontend/artifacts/sage/src/lib/: utils.ts
frontend/artifacts/sage/src/pages/: Home.tsx  not-found.tsx
frontend/artifacts_page/: CNAME  index.html  script.js  styles.css
installer/: .gitignore  build-manifest.json  sage.nsi
installer/launcher/: launcher.c  launcher.rc
installer/scripts/: compute-hashes.ps1  download-artifacts.ps1  prepare-python.ps1  upload-r2.ps1
notebooks/: ingest.ipynb
scripts/: extract_changelog.py  ingest.py  preprocess.py
src/sage/: __main__.py  app.py  config.py  database.py  desktop.py  llm.py  memory.py  network.py  prompts.py  utils.py
src/sage/agents/: __init__.py  code_fix.py  diagram.py  general.py  graph.py  planner.py  quiz.py  reasoning.py  research.py  response.py  retrieval.py  router.py  state.py
src/sage/rag/: __init__.py  corpus.py  parsers.py  preprocessor.py  retrieval.py  vectorstore.py
src/sage/routers/: __init__.py  chat.py  documents.py  sessions.py  system.py
src/sage/tools/: __init__.py  calculator.py  export.py  library_docs.py  mermaid.py  sandbox.py  search.py
tests/: conftest.py  test_agents.py  test_agents_core.py  test_agents_diagram_extra.py  test_agents_graph.py  test_agents_quiz_extra.py  test_agents_reasoning_extra.py  test_agents_research.py  test_agents_response.py  test_agents_retrieval.py  test_app_core.py  test_app_startup.py  test_database.py  test_desktop.py  test_llm_core.py  test_llm_logic.py  test_logic_boost.py  test_main.py  test_memory.py  test_network.py  test_rag_corpus.py  test_rag_parsers.py  test_rag_preprocessor.py  test_rag_retrieval.py  test_rag_vectorstore.py  test_router.py  test_routers.py  test_routers_chat.py  test_search_tools.py  test_tools_init.py  test_tools_logic.py  test_utils.py
