[project]
name = "sage"
version = "0.1.0"
description = "Multi-Agent offline-first RAG-based Educational Assistant"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Ahmad Raza", email = "ahmad.raza@scholar.tu.edu.pk" },
    { name = "Abdullah Khan", email = "abdullah.khan@scholar.tu.edu.pk" }
]
requires-python = ">=3.11,<3.13"
keywords = [
    "rag",
    "llm",
    "educational-assistant",
    "offline-ai",
    "multi-agent"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Console",
    "Natural Language :: English",
]
dependencies = [
    "streamlit>=1.55",
    "langchain>=1.0",
    "langgraph>=1.0",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "langgraph-checkpoint-sqlite>=3.0",
    "langmem>=0.0.20",
    "chromadb>=0.5",
    "sentence-transformers",
    "langchain-sandbox>=0.0.1,<0.0.6",
    "pydantic>=2.9",
    "pydantic-settings",
    "structlog>=24.0",
    "pystray",
    "pillow",
    "rank-bm25",
    "psutil",
    "aiosqlite",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "mypy",
    "ruff",
    "pre-commit",
]
gpu = ["llama-cpp-python"]
online = [
    "arxiv>=2.1",
    "duckduckgo-search>=7.0",
    "wikipedia>=1.4",
    "langchain-mcp-adapters>=0.2",
]

[project.scripts]
sage = "sage.__main__:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

# ── Ruff ─────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["sage"]

# ── Mypy ─────────────────────────────────────────────────────
[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "gradio.*",
    "langchain.*",
    "langchain_openai.*",
    "langchain_community.*",
    "langchain_sandbox.*",
    "langgraph.*",
    "langmem.*",
    "pystray.*",
    "rank_bm25.*",
    "sentence_transformers.*",
    "structlog.*",
    "arxiv.*",
    "wikipedia.*",
]
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

# ── Coverage ─────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/sage"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
